# NumberDetector

./: .gitignore  CMakeLists.txt  README.md  Readme.txt  extractor.py  main.py  requirements.txt
src/: CMakeLists.txt  NumberDetector.cpp  detectDigits.py  detector.py  extractor.py  featureExtractions.py  predict.py  train.py  trainer.py
src/drawText/: CMakeLists.txt  DrawText.cpp  DrawText.hpp
